--- a/starter/app/src/main/res/layout/dog_item.xml
+++ b/starter/app/src/main/res/layout/dog_item.xml
@@ -138,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="205dp" />
+            app:layout_constraintGuide_begin="@dimen/guide_205" />
 
         <View
             android:layout_width="match_parent"
