--- a/starter/app/src/main/res/layout/dog_item.xml
+++ b/starter/app/src/main/res/layout/dog_item.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="dog"
+            type="com.udacity.shoestore.models.Dog" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,6 +54,7 @@
             style="@style/item_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@{dog.name}"
             app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -76,6 +79,7 @@
             style="@style/item_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@{dog.description}"
             app:layout_constraintBottom_toTopOf="@+id/textView11"
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -101,6 +105,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:text="@{Double.toString(dog.size)}"
             app:layout_constraintBottom_toTopOf="@+id/text_description"
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -126,6 +131,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:text="@{dog.company}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/text_description"
             app:layout_constraintStart_toStartOf="@+id/text_description"
